[package]
name = "mobc2"
version = "0.1.0"
authors = ["importcjj <importcjj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.15"
futures-channel = "0.3.15"
async-trait = "0.1.50"

tokio = { version = "1", features=["rt", "rt-multi-thread"], optional = true }
async-std = { version = "1.0", features=["unstable"], optional = true }
actix-rt = { version = "1", optional = true }

[features]
tokio-comp = ["tokio"]
async-std-comp = ["async-std"]
actix-comp = ["actix-rt"]

[dev-dependencies]
tide = "0.16.0"
async-std = { version = "1.9.0", features = ["attributes"] }
mobc = { version = "0.7.3" }
redis = { version = "0.20.2", features = ["aio", "async-std-comp"] }
tokio-postgres = "0.7.2"
tokio = { version = "1.8.1", features = ["full"] }

[[example]]
name = "mobc_postgres"
path = "examples/mobc_postgres.rs"
required-features = ["tokio-comp"]

[[example]]
name = "mobc2_postgres"
required-features = ["tokio-comp"]

