[package]
name = "mobc"
version = "0.7.3"
authors = ["importcjj <importcjj@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT/Apache-2.0"
description = "A generic connection pool with async/await support"
repository = "https://github.com/importcjj/mobc"
categories = ["asynchronous", "network-programming"]
keywords = ["database", "pool", "async", "await"]
documentation = "https://docs.rs/mobc/latest/mobc/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["tokio", "unstable"]
unstable = []

[dependencies]
futures-core = "0.3"
futures-channel = { version = "0.3", features=["sink"] }
futures-util = { version = "0.3", features=["sink"] }
tokio = { version = "1", features=["rt", "rt-multi-thread", "time"], optional = true }
async-std = { version = "1.0", features=["unstable"], optional = true }
actix-rt = { version = "1", optional = true }
async-trait = "0.1"
futures-timer = "3.0.2"
log = "0.4"
thiserror = "1.0"
metrics = "0.18"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
env_logger = "0.8"
tide = "0.16"
async-std = { version = "1.0", features = ["attributes"] }
actix-web = "3"
actix-rt = "2"

[[example]]
name = "actix-web"
required-features = ["actix-rt"]

[[example]]
name = "tide"
required-features = ["async-std"]

[package.metadata.docs.rs]
features = ["unstable"]
rustdoc-args = ["--cfg", "feature=\"unstable\""]
