[package]
name = "mobc-foo"
version = "0.1.0"
authors = ["importcjj <importcjj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mobc = { version = "0.5", features = ["async-std"] }

[dev-dependencies]
env_logger = "0.7"
tide = "0.5"
async-std = { version = "1.0", features = ["attributes"] }
actix-web = "2.0.0"
actix-rt = "1.0"
actix-http = "1.0"