[package]
name = "mobc-redis"
version = "0.5.2"
authors = ["importcjj <importcjj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mobc = { version = "0.5", path = ".." }
redis = "0.15"

[dev-dependencies]
actix-web = "2.0.0"
actix-rt = "1.0"
actix-http = "1.0"
tokio = { version = "0.2", features = ["full"]}