[package]
name = "mobc-redis"
version = "0.6.0"
authors = ["importcjj <importcjj@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Redis support for the mobc connection pool"
repository = "https://github.com/importcjj/mobc"
keywords = ["redis", "pool", "async", "await"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mobc = { version = "0.6", path = ".." }
redis = { version = "0.18", features = ["aio"] }

[dev-dependencies]
actix-web = "2.0.0"
actix-rt = "1.0"
actix-http = "1.0"
tokio = { version = "0.3", features = ["full"]}
redis = { version = "0.18", features = ["tokio-comp"] }
