[package]
name = "mobc-redis"
version = "0.7.0"
authors = ["importcjj <importcjj@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Redis support for the mobc connection pool"
repository = "https://github.com/importcjj/mobc"
keywords = ["redis", "pool", "async", "await"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mobc = { version = "0.7", path = ".." }
redis = { version = "0.19" }

[features]
default = ["mobc/tokio", "redis/tokio-comp"]
async-std-comp = ["mobc/async-std", "redis/async-std-comp"]

[dev-dependencies]
tokio = { version = "1.0", features = ["full"]}

[[examples]]
name = "redis"

[[examples]]
name = "redis_async_std"
required-features = ["async-std-comp"]