[package]
name = "mobc-postgres"
version = "0.2.1"
authors = ["importcjj <importcjj@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT/Apache-2.0"
description = "Postgres support for the mobc connection pool"
repository = "https://github.com/importcjj/mobc/tree/master/postgres"
keywords = ["postgres", "pool", "database", "async", "await"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["runtime"]
runtime = ["tokio/rt-full", "tokio/tcp", "tokio/uds"]

with-bit-vec-0_6 = ["postgres-types/with-bit-vec-0_6"]
with-chrono-0_4 = ["postgres-types/with-chrono-0_4"]
with-eui48-0_4 = ["postgres-types/with-eui48-0_4"]
with-geo-types-0_4 = ["postgres-types/with-geo-types-0_4"]
with-serde_json-1 = ["postgres-types/with-serde_json-1"]
with-uuid-0_7 = ["postgres-types/with-uuid-0_7"]
with-uuid-0_8 = ["postgres-types/with-uuid-0_8"]

[dependencies]
mobc = { version = "0.1.0", path = ".." }
tokio-postgres = "0.5.0-alpha.1"
futures_01 = { version = "0.1", package = "futures"}
tokio-executor = "0.2.0-alpha.6"

[dev-dependencies]
tokio = "0.2.0-alpha.6"