[package]
name = "mobc-postgres"
version = "0.3.0"
authors = ["importcjj <importcjj@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT/Apache-2.0"
description = "Postgres support for the mobc connection pool"
repository = "https://github.com/importcjj/mobc/tree/master/postgres"
keywords = ["postgres", "pool", "database", "async", "await"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["mobc/tokio-runtime"]
async-std-runtime = ["mobc/async-std-runtime"]

with-bit-vec-0_6 = ["tokio-postgres/with-bit-vec-0_6"]
with-chrono-0_4 = ["tokio-postgres/with-chrono-0_4"]
with-eui48-0_4 = ["tokio-postgres/with-eui48-0_4"]
with-geo-types-0_4 = ["tokio-postgres/with-geo-types-0_4"]
with-serde_json-1 = ["tokio-postgres/with-serde_json-1"]
with-uuid-0_7 = ["tokio-postgres/with-uuid-0_7"]


# with-uuid-0_8 = ["tokio-postgres/with-uuid-0_8"]

[dependencies]
mobc = { version = "0.3", path = ".." }
tokio-postgres = "=0.5.0-alpha.2"
futures_01 = { version = "0.1", package = "futures"}

[dev-dependencies]
tokio = { version = "0.2", features = ["macros"] }
async-std = { version = "1.0", features = ["unstable"] }
env_logger = "0.7.1"