[package]
name = "mobc-redis"
version = "0.1.0"
authors = ["importcjj <importcjj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mobc = { path = ".." }
redis = "0.13.0"
tokio-executor = "0.2.0-alpha.6"

[dev-dependencies]
tokio = "0.2.0-alpha.6"
log = "0.4"
futures_01 = { version = "0.1", package = "futures"}