[package]
name = "mobc-redis"
version = "0.1.0"
authors = ["importcjj <importcjj@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT/Apache-2.0"
description = "Redis support for the r2d2 connection pool"
repository = "https://github.com/importcjj/mobc/redis"
keywords = ["redis", "pool", "database", "async", "await"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mobc = { version = "0.1.0", path = ".." }
redis = "0.13.0"
tokio-executor = "0.2.0-alpha.6"

[dev-dependencies]
tokio = "0.2.0-alpha.6"
log = "0.4"
futures_01 = { version = "0.1", package = "futures"}