[package]
name = "mobc-redis"
version = "0.2.6"
authors = ["importcjj <importcjj@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT/Apache-2.0"
description = "Redis support for the mobc connection pool"
repository = "https://github.com/importcjj/mobc/tree/master/redis"
keywords = ["redis", "pool", "database", "async", "await"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["tokio-runtime"]
tokio-runtime = ["mobc/tokio-runtime"]
async-std-runtime = ["mobc/async-std-runtime"]

[dependencies]
mobc = { version = "0.2", path = ".." }
redis = "0.13.0"

[dev-dependencies]
tokio = "0.2.0-alpha.6"
log = "0.4"
futures_01 = { version = "0.1", package = "futures"}
async-std = { version = "1.0", features = ["unstable"] }
env_logger = "0.7.1"