[package]
name = "async-std-comp"
version = "0.1.0"
authors = ["jiaju"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mobc-redis = { version = "0.7", default-features = false, features = ["async-std-comp"]}
async-std = { version = "1.0", features = ["attributes"] }
async-channel = "1.0"